fixed resume pdf view

--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -1,5 +1,5 @@
 ---
-layout: page
+layout: default
 ---
 
 <!DOCTYPE html>
@@ -11,9 +11,7 @@ layout: page
 
 <body>
     <center>
-        <object data="../assets/pdf/joshua_lollis_game_dev_resume.pdf" width="800"
-            height="500">
-        </object>
+        {% pdf "../assets/pdf/joshua_lollis_game_dev_resume.pdf" %}
     </center>
 </body>
 
