--- a/_includes/author_skills.html
+++ b/_includes/author_skills.html
@@ -1,11 +1,14 @@
 
-<h4><center>Click a skill to see an associated project!</center></h4> 
-<p>
-    <a href="{{ site.baseurl }}/gallery/snake.html">C++</a>,
-    Engine Architecture, Unity Engine, Dear-Imgui,
-    <a href="{{ site.baseurl }}/gallery/snake">SFML</a>,
-    C#, Python
+<h5><center>Click a skill!</center></h5> 
+
+<p><b>Game Dev:</b>
+    <a href="{{ site.baseurl }}/gallery/snake">C++</a>, <a href="{{ site.baseurl }}/gallery/neoncloud">Unity Engine</a>,
+    <a href="{{ site.baseurl }}/gallery/chompchomp">SFML</a>,
+    <a href="{{ site.baseurl }}/gallery/neoncloud">C#</a>, <a href="https://github.com/TelloViz/Pig-Dice-Game">Python</a>
 </p>
-<p>Photoshop, <a href="{{ site.baseurl }}/gallery/bomber">Illustrator</a>, 3dsMax, Blender, Premiere,<a href="{{ site.baseurl }}/gallery/bomber">Traditional Drawing</a>  </p> 
-<p>Electric Guitar, Electric Bass, Fl Studio, Music Theory</p> 
-<p><a href="{{ site.baseurl }}/gallery/bomber">Character Development</a>, Story Development </p>
+<p><b>Art:</b>
+    Photoshop, <a href="{{ site.baseurl }}/gallery/bomber">Illustrator</a>, <a href="{{ site.baseurl }}/gallery/office">3dsMax</a>, Blender, Premiere, <a href="{{ site.baseurl }}/gallery/bomber">Drawing</a>, <a href="{{ site.baseurl }}/gallery/bomber">Character Development</a>
+</p> 
+<p><b>Music:</b>
+    Guitar, Bass, <a href="{{ site.baseurl }}/music">Fl Studio</a>, <a href="{{ site.baseurl }}/music">Music Theory</a>
+</p>
