update lunar in skills

--- a/_includes/author_skills.html
+++ b/_includes/author_skills.html
@@ -2,7 +2,7 @@
 <h5><center>Click a skill!</center></h5> 
 
 <p><b>Game Dev:</b>
-    <a href="{{ site.baseurl }}/gallery/snake">C++</a>, <a href="{{ site.baseurl }}/gallery/neoncloud">Unity Engine</a>,
+    <a href="{{ site.baseurl }}/gallery/snake">C++</a>, <a href="{{ site.baseurl }}/gallery/lunar">Unity Engine</a>,
     <a href="{{ site.baseurl }}/gallery/chompchomp">SFML</a>,
     <a href="{{ site.baseurl }}/gallery/neoncloud">C#</a>, <a href="https://github.com/TelloViz/Pig-Dice-Game">Python</a>
 </p>
