--- a/_layouts/music.html
+++ b/_layouts/music.html
@@ -1,19 +1,13 @@
 ---
-layout: gallery
+layout: default
 ---
-
-<hr />
-
-
-<h3>"Epic Theme"</h3>
-<h4>Composed for the student film <href="https://www.youtube.com/watch?v=YNGCL4SCtwk">Eek! My Boyfriend Turned Into a Worm!</ahref>.</h4>
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/dke6jsHlGzA?rel=0&amp;controls=1&amp;showinfo=0" modestbranding="1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-<h3>"Tragic Theme"</h3>
-<h4>Composed for the student film <href="https://www.youtube.com/watch?v=YNGCL4SCtwk">Eek! My Boyfriend Turned Into a Worm!</ahref>.</h4>
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/QdSxFJrew5E?rel=0&amp;controls=1&amp;showinfo=0&amp;modestbranding=1"  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-
-<hr />
+<div class="container">
+    <div class="row d-flex justify-content-center">
+        <div class="col-10 m10">
+            <div class="card">
+                <h1 class="card-title"> Music </h1>
+                    {{content}}
+            </div>
+        </div>
+    </div>
+</div>
