fixed skills links

--- a/_includes/author_skills.html
+++ b/_includes/author_skills.html
@@ -2,12 +2,12 @@
 <h5><center>Click a skill!</center></h5> 
 
 <p><b>Game Dev:</b>
-    <a href="{{ site.baseurl }}/gallery/snake">C++</a>, <a href="{{ site.baseurl }}/gallery/lunar">Unity Engine</a>,
-    <a href="{{ site.baseurl }}/gallery/chompchomp">SFML</a>,
-    <a href="{{ site.baseurl }}/gallery/neoncloud">C#</a>, <a href="https://github.com/TelloViz/Pig-Dice-Game">Python</a>
+    <a href="{{ site.baseurl }}/projects/snake">C++</a>, <a href="{{ site.baseurl }}/projects/lunar">Unity Engine</a>,
+    <a href="{{ site.baseurl }}/projects/chompchomp">SFML</a>,
+    <a href="{{ site.baseurl }}/projects/neoncloud">C#</a>, <a href="https://github.com/TelloViz/Pig-Dice-Game">Python</a>
 </p>
 <p><b>Art:</b>
-    Photoshop, <a href="{{ site.baseurl }}/gallery/bomber">Illustrator</a>, <a href="{{ site.baseurl }}/gallery/office">3dsMax</a>, Blender, Premiere, <a href="{{ site.baseurl }}/gallery/bomber">Drawing</a>, <a href="{{ site.baseurl }}/gallery/bomber">Character Development</a>
+    Photoshop, <a href="{{ site.baseurl }}/projects/bomber">Illustrator</a>, <a href="{{ site.baseurl }}/projects/office">3dsMax</a>, Blender, Premiere, <a href="{{ site.baseurl }}/projects/bomber">Drawing</a>, <a href="{{ site.baseurl }}/projects/bomber">Character Development</a>
 </p> 
 <p><b>Music:</b>
     Guitar, Bass, <a href="{{ site.baseurl }}/music">Fl Studio</a>, <a href="{{ site.baseurl }}/music">Music Theory</a>
