--- a/_includes/art-layout.html
+++ b/_includes/art-layout.html
@@ -1,16 +1,16 @@
 <!-- Single Gallery -->
 <div class="col-lg-20">
   <div id="imageGallery{% if include.id_number %}-{{ include.id_number }}{% endif %}">
-    <div id="gallery-sizer{% if include.id_number %}-{{ include.id_number }}{% endif %}"></div>
-    {% for picture in include.gallery.pictures %}
-    <a href="{{ site.url }}{{ site.baseurl }}/assets/img/art/{{ include.art.picture_path }}/{{ picture.original }}"
+    <div id="art-sizer{% if include.id_number %}-{{ include.id_number }}{% endif %}"></div>
+    {% for picture in include.art.pictures %}
+    <center><a href="{{ site.url }}{{ site.baseurl }}/assets/img/art/{{ include.art.picture_path }}/{{ picture.original }}"
       data-responsive="{% for size in picture.sizes %} {{ site.url}}{{ site.baseurl }}/assets/art/{{ include.art.picture_path }}/{{ size }}{% endfor %}"
       class="image" {% if picture.title %}
       data-sub-html="<div class='lg-toolbar caption'><h4>{{ picture.title | escape }}</h4>{% if picture.caption %}<p>{{ picture.caption | escape }}</p>{% endif %}</div>"
       {% endif %}>
       <img alt="{{ picture.title }}" class="img-thumbnail"
         src="{{ site.url }}{{ site.baseurl }}/assets/img/art/{{ include.art.picture_path }}/{{ picture.thumbnail }}" />
-    </a>
+    </a></center>
     {% endfor %}
   </div>
 </div>
