moved office to art

--- a/_includes/author_skills.html
+++ b/_includes/author_skills.html
@@ -7,7 +7,7 @@
     <a href="{{ site.baseurl }}/projects/neoncloud">C#</a>, <a href="https://github.com/TelloViz/Pig-Dice-Game">Python</a>
 </p>
 <p><b>Art:</b>
-    Photoshop, <a href="{{ site.baseurl }}/projects/bomber">Illustrator</a>, <a href="{{ site.baseurl }}/projects/office">3dsMax</a>, Blender, Premiere, <a href="{{ site.baseurl }}/projects/bomber">Drawing</a>, <a href="{{ site.baseurl }}/projects/bomber">Character Development</a>
+    <a href="{{ site.baseurl }}/art/design">Photoshop</a>, <a href="{{ site.baseurl }}/projects/bomber">Illustrator</a>, <a href="{{ site.baseurl }}/art/office">3dsMax</a>, Blender, Premiere, <a href="{{ site.baseurl }}/projects/bomber">Drawing</a>, <a href="{{ site.baseurl }}/projects/bomber">Character Development</a>
 </p> 
 <p><b>Music:</b>
     Guitar, Bass, <a href="{{ site.baseurl }}/music">Fl Studio</a>, <a href="{{ site.baseurl }}/music">Music Theory</a>
