update skill links

--- a/_includes/author_skills.html
+++ b/_includes/author_skills.html
@@ -10,5 +10,5 @@
     <a href="{{ site.baseurl }}/art/design">Photoshop</a>, <a href="{{ site.baseurl }}/projects/bomber">Illustrator</a>, <a href="{{ site.baseurl }}/art/office">3dsMax</a>, Blender, Premiere, <a href="{{ site.baseurl }}/projects/bomber">Drawing</a>, <a href="{{ site.baseurl }}/projects/bomber">Character Development</a>
 </p> 
 <p><b>Music:</b>
-    Guitar, Bass, <a href="{{ site.baseurl }}/music">Fl Studio</a>, <a href="{{ site.baseurl }}/music">Music Theory</a>
+    <a href="{{ site.baseurl }}/music/guitar">Guitar</a>, <a href="{{ site.baseurl }}/music/guitar">Bass</a>, <a href="{{ site.baseurl }}/music">Fl Studio</a>, <a href="{{ site.baseurl }}/music">Music Theory</a>
 </p>
