quick fix to blog.html and recent-articles.html

--- a/_includes/blog_post_article.html
+++ b/_includes/blog_post_article.html
@@ -20,7 +20,8 @@
   </div>
 
   <div class="card-body" itemprop="articleBody">
-    <img class="card-img-top" src="{{site.url}}{{site.baseurl}}{{ page.thumbnail }}" alt="{{ post.title }}" />
+    <!--<img class="card-img-top" src="{{site.url}}{{site.baseurl}}{{ page.thumbnail }}" alt="{{ post.title }}" />-->
+    <img class="card-img-top" src="{{site.url}}{{site.baseurl}}/assets/img/from-desk.png" alt="{{ post.title }}" />
     <br />
     <br />
     {{ content }}
