youtube vids more responsive now

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,3 +6,21 @@
 @import "devlopr";
 
 /* custom css goes below */
+
+
+div.yt-video {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+    height: auto;
+}
+
+div.yt-video iframe, div.yt-video object, div.yt-video embed{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100% !important;
+    height: 100% !important;
+}
