--- a/_includes/head.html
+++ b/_includes/head.html
@@ -166,4 +166,6 @@
     <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
     <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
     <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+
+    {{ % include google-analytics.html %}}
 </head>
