--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@ layout: compress
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: " en " }}">
 {%- include head.html -%}
-{{ % include google-analytics.html %}}
+{ % include google-analytics.html %}
 <body>
   {%- include header.html -%}
   <div class="main-container">
