--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@ layout: compress
 {%- include head.html -%}
 
 <body>
-  { % include google-analytics.html %}
+  { %- include google-analytics.html -%}
   {%- include header.html -%}
   <div class="main-container">
     {{ content }}
