move analytics include

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -167,5 +167,5 @@
     <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
     <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 
-    
+    {%- include google-analytics.html -%}
 </head>
