--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,10 @@ layout: compress
 {%- include head.html -%}
 
 <body>
-
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KSH3Q8ZK" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   {%- include header.html -%}
   <div class="main-container">
     {{ content }}
