--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,9 @@
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
+    gtag('consent', 'default', {ad_storage:'denied', analytics_storage:'denied'});
+    gtag('set', 'ads_data_redaction', true);
+    gtag('set', 'url_passthrough', true);
     gtag('js', new Date());
 
     gtag('config', 'G-CJV6E5LHVM');
