--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,9 @@ layout: compress
       });
     }
   </script>
-  {% include cookie-consent.html %}
+  <!--{% include cookie-consent.html %}-->
+  <script id="CookieDeclaration" src="https://consent.cookiebot.com/e0a4b0a2-c0a3-4645-856e-2d4c2cca202b/cd.js"
+    type="text/javascript" async></script>
 </body>
 
 </html>
