--- a/_includes/cookie-consent.html
+++ b/_includes/cookie-consent.html
@@ -1,4 +1,4 @@
-<style>
+<!-- <style>
     #cookie-notice {padding: 0.5rem 1rem; display: none; text-align: center; position: fixed; bottom: 0; width: calc(100% - 2rem); background: #222; color: rgba(255,255,255,0.8);}
     #cookie-notice a {display: inline-block; cursor: pointer; margin-left: 0.5rem;}
     @media (max-width: 767px) {
@@ -54,4 +54,4 @@
         location.reload();
     });
 
-</script>
+</script> -->
