cookiebot in header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -83,3 +83,6 @@
               <i class="fa fa-times icon"></i>
           </div>
         </div>
+
+        <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="e0a4b0a2-c0a3-4645-856e-2d4c2cca202b"
+        type="text/javascript" async></script>
