--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,16 @@ layout: compress
 {%- include head.html -%}
 
 <body>
+
+  <!--Cookiebot Declaration Script-->
+  <script id="CookieDeclaration" src="https://consent.cookiebot.com/e0a4b0a2-c0a3-4645-856e-2d4c2cca202b/cd.js"
+    type="text/javascript" async></script>
+  <!--End Cookiebot Declaration Script-->
+
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TB8T5ZRJ" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   {%- include header.html -%}
   <div class="main-container">
     {{ content }}
@@ -35,9 +45,7 @@ layout: compress
       });
     }
   </script>
-  <!--{% include cookie-consent.html %}-->
-  <script id="CookieDeclaration" src="https://consent.cookiebot.com/e0a4b0a2-c0a3-4645-856e-2d4c2cca202b/cd.js"
-    type="text/javascript" async></script>
+
 </body>
 
 </html>
