--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
           >
             <span class="icono-hamburger" id="navbar-hamburger"> </span>
           </button>
-          <a class="navbar-brand" href="/jareo-jekyll">{{site.title}}</a>
+          <a class="navbar-brand" href="/">{{site.title}}</a>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               {% for i in site.urls %}
