--- a/_includes/author_skills.html
+++ b/_includes/author_skills.html
@@ -1,2 +1,2 @@
-<p> HTML , CSS , Javascript , PHP, Python, C</p>
-<p> Adobe XD, Inkscape, Git, Linux </p>
+<p> QGIS, GEE, LASTools, GDAL/OGR, SCP, SNAP, ArcGIS, GeoDa</p>
+<p> Git, Linux, Python, R, Django, React, PostgreSQL </p>
