--- a/_includes/head.html
+++ b/_includes/head.html
@@ -173,7 +173,7 @@
     })(document, "script", "dhm");
   </script> -->
   <!-- buy me a coffeee -->
-  <script
+  <!-- <script
     data-name="BMC-Widget"
     src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
     data-id="sujaykundu"
@@ -183,7 +183,7 @@
     data-position="right"
     data-x_margin="10"
     data-y_margin="10"
-  ></script>
+  ></script> -->
 
   <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
   <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
