--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,9 @@ layout: compress
 <html lang="{{ page.lang | default: site.lang | default: " en " }}">
 {%- include head.html -%}
 <body>
-        {%- include header.html -%}
+        {%- include v2/header.html -%}
+
+        <!-- {%- include header.html -%} -->
         <div class="main-container">
             {{ content }}
         </div>
