--- a/_layouts/full-width.html
+++ b/_layouts/full-width.html
@@ -6,7 +6,8 @@ layout: compress
 <html lang="{{ page.lang | default: site.lang | default: " en " }}">
 {%- include head.html -%}
 <body>
-        {%- include header.html -%}
+    {%- include v2/header.html -%}
+        <!-- {%- include header.html -%} -->
         <div class="container-fluid">
             {{ content }}
         </div>
