Work on Portfolio Website
Got vast majority of it done, just have to fill w/ _posts for my projects on github

--- a/_includes/coding_activity.html
+++ b/_includes/coding_activity.html
@@ -1,9 +1,12 @@
-<!-- Wakatime ( Replace with your own wakatime embed config at https://wakatime.com )-->
+<!-- https://wakatime.com -->
 
 <!-- Languages  -->
-<figure><embed src="https://wakatime.com/share/@sujaykundu777/e4c2a44e-390d-41f3-a4c8-b23b05fbec30.svg"></embed></figure>
+<figure>
+    <embed src="https://wakatime.com/share/@efa0cc05-201c-4ae1-bb0f-0ca759db5b91/3173aa5c-d9d6-40dd-aff2-ac7ad9847f5b.svg"></embed>
+</figure>
+
 
 <!-- Hours Coded -->
 <figure>
-    <embed src="https://wakatime.com/share/@sujaykundu777/5fcfa63e-9357-44d1-9a49-5244504a1f13.svg"></embed>
+    <embed src="https://wakatime.com/share/@efa0cc05-201c-4ae1-bb0f-0ca759db5b91/b862bb6b-d361-4695-b1db-c9492b5ba0f0.svg"></embed>
 </figure>
