--- a/_includes/recent_articles.html
+++ b/_includes/recent_articles.html
@@ -1,7 +1,7 @@
 <section id="recent-articles">
   <div id="recent-articles-header">
     <div id="recent-articles-title">
-      <h1 class="card-title">Recent Articles</h1>
+      <h1 class="card-title">Recent Projects & Research</h1>
     </div>
     <div id="recent-articles-show-all">
       <a class="btn btn-lg btn-dark" href="/blog"> View All </a>
@@ -20,7 +20,7 @@
               {% if author %}
                {% assign author_data = site.data.authors[author] %}
                <img
-                src="{{site.url}}{{site.baseurl}}/assets/img/authors/{{author_data.avatar}}"
+                src="{{site.url}}{{site.baseurl}}/assets/img/authors/nashProfilePicture.jpg"
                 width="50px"
                 height="50px"
              />
