--- a/_includes/author_skills.html
+++ b/_includes/author_skills.html
@@ -1,2 +1,5 @@
-<p> HTML , CSS , Javascript , PHP, Python, C</p>
-<p> Adobe XD, Inkscape, Git, Linux </p>
+<ul>
+    <li>Git , SQL , HTML , CSS , JavaScript , Maven , PHP , Python , C , C++ , WebStorm </li>
+    <li>Matlab , Pandas , Numpy , Seaborn , PyTorch </li>
+    <li>Linux , Android Studio , React-Native , Expo , Kotlin </li>
+</ul>
