--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -21,20 +21,19 @@
 <!-- home hero section -->
 <div class="jumbotron">
   <img class="author-profile-img" src="{{site.url}}{{site.baseurl}}/assets/img/{{site.author_logo}}" />
-  <p class="jumbotron-heading">Hi, I am {{site.author}} !</p>
+  <p class="jumbotron-heading">{{site.author}}</p>
 
   <p class="lead" id="typewriteText"></p>
-  <span>
-    {%- include github_star_button.html -%}
-    {%- include github_fork_button.html -%}
-  </span>
+  {% if site.github_username %} {%- include github_follow_button.html -%} {% endif %}
+
   <!-- uncomment/modify buttons as you want-->
   <div class="jumbotron-btns">
-    <a href="{{site.url}}{{site.baseurl}}/get-started">
-      <button class="btn btn-md btn-warning"> <strong>Get Started</strong> </button>
+    <a href="{{site.url}}{{site.baseurl}}/about">
+      <button class="btn btn-md btn-warning"> <strong>get to know me</strong> </button>
     </a>
-    <a id="olvy-target">
-      <button class="btn btn-md btn-default"> <strong>What's New</strong> </button>
-     </a>
   </div>
+  <br>
+  <figure>
+    <embed src="https://wakatime.com/share/@efa0cc05-201c-4ae1-bb0f-0ca759db5b91/d52cf0be-20e4-4699-bbbf-4a8a515449b1.svg"></embed>
+  </figure>
 </div>
