--- a/_layouts/about-me.html
+++ b/_layouts/about-me.html
@@ -178,7 +178,7 @@ layout: default
         <div class="col-md-6">
           <h4 class="experience-title">{{detail.college_degree }}</h4>
           <h6 class="experience-info">{{detail.college_name}}</h6>
-          <p class="experience-desc">{{detail.description}}</p>
+          <p class="experience-desc">{{detail.description}}, {{detail.college_gpa}}</p>
           <p><a href="{{detail.college_url}}">{{ detail.college_url}}</a></p>
         </div>
       </div>
