--- a/_includes/blog_authors.html
+++ b/_includes/blog_authors.html
@@ -1,6 +1,6 @@
 
     {% for author in site.authors %}
         <li>
-            <a href="/blog/authors/{{ author.username }}">{{ author.name }}</a>
+            <a href="/about/">{{ author.name }}</a>
         </li>
     {% endfor %}
