Experimentation w/ blog posts

--- a/_includes/blog_post_article.html
+++ b/_includes/blog_post_article.html
@@ -27,13 +27,15 @@
   </div>
 
   <div class="card-body" itemprop="articleBody">
-    <img
-      class="card-img-top"
-      src="{{site.url}}{{site.baseurl}}{{ page.thumbnail }}"
-      alt="{{ post.title }}"
-    />
-    <br />
-    <br />
+<!--The class directly below handles the thumbnail at the start of each blog post in its respective article.-->
+<!--    <img-->
+<!--      class="card-img-top"-->
+<!--      src="{{site.url}}{{site.baseurl}}{{ page.thumbnail }}"-->
+<!--      alt="{{ post.title }}"-->
+<!--    />-->
+
+<!--   <br />
+   <br />-->
     {{ content }}
     <br />
     {%- include share_page.html -%}
