--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,3 +6,21 @@
 .example-main {
   color: blue;
 }
+
+//The following .css settings focus on our youtube embedded videos so they adjust according to size of webpage.
+
+.responsive-video-container {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 aspect ratio */
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+}
+
+.responsive-video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
