--- a/_layouts/about-me.html
+++ b/_layouts/about-me.html
@@ -107,7 +107,7 @@ layout: default
           <p class="experience-desc">{{ project.project_description }}</p>
           <p>
             <a class="project-link" href="{{project.project_url}}"
-              >GitHub Repository</a
+              >Overview</a
             >
           </p>
         </div>
