Added more projects
Text-Mining & SQL-Database

--- a/_includes/blog_categories.html
+++ b/_includes/blog_categories.html
@@ -1,9 +1,10 @@
-
-            {% for tag in site.categories %} {% capture tag_name %}{{ tag | first }}{% endcapture %}
-            <div id="#{{ tag_name | slugize }}"></div>
-            <li class="tag-head">
-                <a href="{{ site.baseurl }}/blog/categories/{{ tag_name }}">{{ tag_name }}</a>
-            </li>
-            <a name="{{ tag_name | slugize }}"></a>
-
-            {% endfor %}
+<!--Categories for both the main blog page and at the bottom of each respective project post. [ABC Order]-->
+{% assign sorted_tags = site.categories | sort %}
+{% for tag in sorted_tags %}
+{% capture tag_name %}{{ tag | first }}{% endcapture %}
+<div id="#{{ tag_name | slugize }}"></div>
+<li class="tag-head">
+    <a href="{{ site.baseurl }}/blog/categories/{{ tag_name }}">{{ tag_name }}</a>
+</li>
+<a name="{{ tag_name | slugize }}"></a>
+{% endfor %}
