--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,7 +1,6 @@
+<!--StyleGuide-->
 <style>
-/* change cover_img in config.yml */
-
-.jumbotron {
+  .jumbotron {
     background-color: var(--main-background-color) !important;
     /*background-image: url('/assets/img/{{site.hero_cover_img}}');*/
     background-image: url('../assets/img/home-cover-picture-cpu-city.png');
@@ -9,44 +8,44 @@
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
-}
+  }
 
-.jumbotron-btns {
-  display: block;
-  margin-top: 8px;
-  padding-bottom: 10px;
-  border-radius: 10px;
-}
+  .jumbotron-btns {
+    display: block;
+    margin-top: 8px;
+    padding-bottom: 10px;
+    border-radius: 10px;
+  }
 
-.jumbotron-heading, .lead {
-  color: #fff;
-}
+  .jumbotron-heading, .lead {
+    color: #fff;
+  }
 
-.linkedin-container {
-  font-size: 25px;
-  display: inline-block;
-  backdrop-filter: blur(10px);
-  padding: 10px 20px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border-radius: 10px;
-}
+  .linkedin-container {
+    font-size: 25px;
+    display: inline-block;
+    backdrop-filter: blur(10px);
+    padding: 10px 20px;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+  }
 
-.lead {
-  color: darkorange;
-  font-size: 20px;
-  display: inline-block;
-  backdrop-filter: blur(10px);
-  padding: 5px 5px;
-  background-color: rgba(0, 0, 0, 0.5); /* Optional: adds slight dark background */
-  border-radius: 10px; /* Optional: rounds the corners */
-}
+  .lead {
+    color: darkorange;
+    font-size: 20px;
+    display: inline-block;
+    backdrop-filter: blur(10px);
+    padding: 5px 5px;
+    background-color: rgba(0, 0, 0, 0.5); /* Optional: adds slight dark background */
+    border-radius: 10px; /* Optional: rounds the corners */
+  }
 
-.code-stats{
-  display: inline-block;
-  backdrop-filter: blur(15px);
-  padding: 7px 7px;
-  border-radius: 10px;
-}
+  .code-stats{
+    display: inline-block;
+    backdrop-filter: blur(15px);
+    padding: 7px 7px;
+    border-radius: 10px;
+  }
 </style>
 
 <!-- home hero section -->
@@ -81,7 +80,7 @@
   </div>
   {% endif %}
 
-
+<br/>
 
 
   <div class="code-stats">
