--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,46 +1,96 @@
+<style>
+  .nav.justify-content-end {
+    margin-right: 10px;
+  }
 
-        <nav class="navbar navbar-expand-lg fixed-top navbar-dark" id="topNav">
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-toggle="collapse"
-            data-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="icono-hamburger" id="navbar-hamburger"> </span>
-          </button>
-          <a class="navbar-brand" href="/">{{site.title}}</a>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              {% for i in site.urls %}
-              <li class="nav-item">
-                <a
-                  class="nav-link"
-                  href="{{ site.url}}{{site.baseurl}}{{ i.url }}"
-                  >{{ i.text }}</a
-                >
-              </li>
-              {% endfor %}
+  .linkedin-container {
+    font-size: 25px;
+    display: inline-block;
+    backdrop-filter: blur(10px);
+    padding: 10px 20px;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+    transition: all 0.3s ease;  /* Adds a smooth transition */
+    /*margin-left: 5px;  Extra added margin !*/
+  }
 
-            </ul>
-          </div>
-          <ul class="nav justify-content-end">
-            <li class="nav-item">
-              <a class="nav-link toggle-search-button" href="#search">
-                <i class="fa fa-search search-icon" aria-hidden="true"></i>
-              </a>
-            </li>
-            <li class="nav-item"> 
-              <input
-                class="nav-link switch theme-toggle"
-                type="checkbox"
-                name="checkbox"
-              />
-            </li>
-          </ul>
-        </nav>
+  .linkedin-container:hover {
+    background-color: rgba(0, 0, 0, 0.7);
+    transform: translateY(-2px);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  }
+
+
+  @media (max-width: 991.98px)
+  {
+    .d-flex.align-items-center
+    {
+      margin-left: auto;
+    }
+
+    .linkedin-container
+    {
+      padding: 18px 18px;
+      font-size: 20px;
+    }
+  }
+
+  @media (max-width: 575.98px)
+  {
+    .linkedin-container
+    {
+      padding: 8px 12px;
+      font-size: 18px;
+    }
+  }
+
+</style>
+
+<nav class="navbar navbar-expand-lg fixed-top navbar-dark" id="topNav">
+  <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+  >
+    <span class="icono-hamburger" id="navbar-hamburger"> </span>
+  </button>
+  <a class="navbar-brand" href="/">{{site.title}}</a>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      {% for i in site.urls %}
+      <li class="nav-item">
+        <a class="nav-link" href="{{ site.url}}{{site.baseurl}}{{ i.url }}">{{ i.text }}</a>
+      </li>
+      {% endfor %}
+    </ul>
+  </div>
+
+  <div class="d-flex align-items-center">
+    <ul class="nav justify-content-end">
+      <li class="nav-item">
+        <a class="nav-link toggle-search-button" href="#search">
+          <i class="fa fa-search search-icon" aria-hidden="true"></i>
+        </a>
+      </li>
+      <li class="nav-item">
+        <input class="nav-link switch theme-toggle" type="checkbox" name="checkbox" />
+      </li>
+    </ul>
+
+    {% if site.linkedin_username %}
+    <div class="linkedin-container">
+      <a class="social-link" href="http://linkedin.com/in/{{ site.linkedin_username }}">
+        <i class="fab fa-linkedin-in"></i>
+      </a>
+    </div>
+    {% endif %}
+  </div>
+</nav>
+
         <div id="progress-bar"></div>
         <!-- Search Form -->
         <div class="search-form-container">
@@ -65,4 +115,7 @@
           <div class="close-search-button search-form-container__close">
               <i class="fa fa-times icon"></i>
           </div>
+
+
+
         </div>
