Fixed icon alignments
added pop effect on mouseover for a few more icons

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -81,6 +81,7 @@
       </li>
     </ul>
 
+    <!--Start of Static Linkedin action button-->
     {% if site.linkedin_username %}
     <div class="linkedin-container">
       <a class="social-link" href="http://linkedin.com/in/{{ site.linkedin_username }}">
